[tool.poetry]
name = "fish-flask"
version = "0.1.0"
description = ""
authors = ["Alex Thompson <alex@arcticdataservices.com>"]
readme = "README.md"
packages = [{include = "fish_flask"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-cors = "^3.0.10"
black = "^22.12.0"
pandas = "^1.5.3"
openpyxl = "^3.0.10"
pipwin = "^0.5.2"
ipykernel = "^6.21.1"
stateplane = "^0.5.0"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
